-- =====================================================================
--  ИС «Автосалон» — DDL-скрипт создания схемы базы данных
--  СУБД: PostgreSQL 14+
--  Нормализация: 3НФ. Целостность: PK, FK, UNIQUE, NOT NULL, CHECK.
--
--  Примечание: в приложении схемой управляет Hibernate (ddl-auto=update),
--  данный скрипт является каноническим артефактом проектирования БД
--  (этап 3 МУ) и пригоден для ручного развёртывания схемы в PostgreSQL.
-- =====================================================================

-- Чистое пересоздание (для ручного применения скрипта)
DROP TABLE IF EXISTS notifications      CASCADE;
DROP TABLE IF EXISTS reviews            CASCADE;
DROP TABLE IF EXISTS favorites          CASCADE;
DROP TABLE IF EXISTS payments           CASCADE;
DROP TABLE IF EXISTS installment_plans  CASCADE;
DROP TABLE IF EXISTS orders             CASCADE;
DROP TABLE IF EXISTS test_drives        CASCADE;
DROP TABLE IF EXISTS vehicle_images     CASCADE;
DROP TABLE IF EXISTS vehicles           CASCADE;
DROP TABLE IF EXISTS brands             CASCADE;
DROP TABLE IF EXISTS users              CASCADE;

-- ---------------------------------------------------------------------
-- 1. Пользователи системы (роли: CLIENT, MANAGER, ADMIN)
-- ---------------------------------------------------------------------
CREATE TABLE users (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    full_name     VARCHAR(150) NOT NULL,
    email         VARCHAR(150) NOT NULL,
    password_hash VARCHAR(100) NOT NULL,
    phone         VARCHAR(20),
    role          VARCHAR(20)  NOT NULL DEFAULT 'CLIENT',
    loyalty_level VARCHAR(20)  NOT NULL DEFAULT 'STANDARD',
    pdn_consent   BOOLEAN      NOT NULL DEFAULT FALSE,
    active        BOOLEAN      NOT NULL DEFAULT TRUE,
    created_at    TIMESTAMP    NOT NULL DEFAULT now(),
    updated_at    TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT uq_users_email   UNIQUE (email),
    CONSTRAINT ck_users_role    CHECK (role IN ('CLIENT', 'MANAGER', 'ADMIN')),
    CONSTRAINT ck_users_loyalty CHECK (loyalty_level IN ('STANDARD', 'SILVER', 'GOLD', 'PLATINUM'))
);

-- ---------------------------------------------------------------------
-- 2. Марки автомобилей
-- ---------------------------------------------------------------------
CREATE TABLE brands (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name       VARCHAR(80)  NOT NULL,
    country    VARCHAR(80),
    logo_url   VARCHAR(512),
    created_at TIMESTAMP    NOT NULL DEFAULT now(),
    updated_at TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT uq_brands_name UNIQUE (name)
);

-- ---------------------------------------------------------------------
-- 3. Автомобили (конкретные единицы с VIN)
-- ---------------------------------------------------------------------
CREATE TABLE vehicles (
    id               BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    brand_id         BIGINT        NOT NULL,
    model            VARCHAR(120)  NOT NULL,
    year             INT           NOT NULL,
    vin              VARCHAR(17)   NOT NULL,
    price            NUMERIC(12,2) NOT NULL,
    body_type        VARCHAR(20)   NOT NULL,
    engine_type      VARCHAR(20)   NOT NULL,
    transmission     VARCHAR(20)   NOT NULL,
    drive_type       VARCHAR(10)   NOT NULL,
    color            VARCHAR(40)   NOT NULL,
    mileage          INT           NOT NULL DEFAULT 0,
    power_hp         INT           NOT NULL,
    engine_volume    NUMERIC(3,1),
    fuel_consumption NUMERIC(4,1),
    equipment_level  VARCHAR(60),
    description      TEXT,
    image_url        VARCHAR(512),
    status           VARCHAR(20)   NOT NULL DEFAULT 'IN_STOCK',
    created_at       TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at       TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT uq_vehicles_vin       UNIQUE (vin),
    CONSTRAINT fk_vehicles_brand     FOREIGN KEY (brand_id) REFERENCES brands (id),
    CONSTRAINT ck_vehicles_year      CHECK (year BETWEEN 1950 AND 2100),
    CONSTRAINT ck_vehicles_price     CHECK (price > 0),
    CONSTRAINT ck_vehicles_mileage   CHECK (mileage >= 0),
    CONSTRAINT ck_vehicles_power     CHECK (power_hp > 0),
    CONSTRAINT ck_vehicles_body      CHECK (body_type IN ('SEDAN','SUV','HATCHBACK','COUPE','WAGON','PICKUP','MINIVAN','CROSSOVER')),
    CONSTRAINT ck_vehicles_engine    CHECK (engine_type IN ('PETROL','DIESEL','HYBRID','ELECTRIC','GAS')),
    CONSTRAINT ck_vehicles_trans     CHECK (transmission IN ('MANUAL','AUTOMATIC','ROBOT','CVT')),
    CONSTRAINT ck_vehicles_drive     CHECK (drive_type IN ('FWD','RWD','AWD')),
    CONSTRAINT ck_vehicles_status    CHECK (status IN ('IN_STOCK','RESERVED','SOLD','UNAVAILABLE'))
);

-- ---------------------------------------------------------------------
-- 4. Фотогалерея автомобиля (1:N к vehicles)
-- ---------------------------------------------------------------------
CREATE TABLE vehicle_images (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    vehicle_id BIGINT       NOT NULL,
    url        VARCHAR(512) NOT NULL,
    sort_order INT          NOT NULL DEFAULT 0,
    created_at TIMESTAMP    NOT NULL DEFAULT now(),
    updated_at TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT fk_vimg_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id) ON DELETE CASCADE
);

-- ---------------------------------------------------------------------
-- 5. Записи на тест-драйв
-- ---------------------------------------------------------------------
CREATE TABLE test_drives (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id       BIGINT       NOT NULL,
    vehicle_id    BIGINT       NOT NULL,
    manager_id    BIGINT,
    dealer_center VARCHAR(120) NOT NULL,
    scheduled_at  TIMESTAMP    NOT NULL,
    status        VARCHAR(20)  NOT NULL DEFAULT 'PENDING',
    contact_phone VARCHAR(20)  NOT NULL,
    notes         VARCHAR(500),
    created_at    TIMESTAMP    NOT NULL DEFAULT now(),
    updated_at    TIMESTAMP    NOT NULL DEFAULT now(),
    CONSTRAINT fk_td_user    FOREIGN KEY (user_id)    REFERENCES users (id),
    CONSTRAINT fk_td_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id),
    CONSTRAINT fk_td_manager FOREIGN KEY (manager_id) REFERENCES users (id),
    CONSTRAINT ck_td_status  CHECK (status IN ('PENDING','CONFIRMED','COMPLETED','CANCELLED','REJECTED'))
);

-- ---------------------------------------------------------------------
-- 6. Заказы (покупка автомобиля: полная оплата или рассрочка)
-- ---------------------------------------------------------------------
CREATE TABLE orders (
    id           BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id      BIGINT        NOT NULL,
    vehicle_id   BIGINT        NOT NULL,
    manager_id   BIGINT,
    payment_type VARCHAR(20)   NOT NULL,
    status       VARCHAR(20)   NOT NULL DEFAULT 'PENDING',
    total_price  NUMERIC(12,2) NOT NULL,
    created_at   TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at   TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT fk_orders_user    FOREIGN KEY (user_id)    REFERENCES users (id),
    CONSTRAINT fk_orders_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id),
    CONSTRAINT fk_orders_manager FOREIGN KEY (manager_id) REFERENCES users (id),
    CONSTRAINT ck_orders_payment CHECK (payment_type IN ('FULL','INSTALLMENT')),
    CONSTRAINT ck_orders_status  CHECK (status IN ('PENDING','CONFIRMED','PAID','COMPLETED','CANCELLED')),
    CONSTRAINT ck_orders_price   CHECK (total_price > 0)
);

-- ---------------------------------------------------------------------
-- 7. Планы рассрочки (1:1 к заказу типа INSTALLMENT)
-- ---------------------------------------------------------------------
CREATE TABLE installment_plans (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id        BIGINT        NOT NULL,
    down_payment    NUMERIC(12,2) NOT NULL,
    term_months     INT           NOT NULL,
    interest_rate   NUMERIC(5,2)  NOT NULL,
    monthly_payment NUMERIC(12,2) NOT NULL,
    total_amount    NUMERIC(12,2) NOT NULL,
    created_at      TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at      TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT uq_inst_order      UNIQUE (order_id),
    CONSTRAINT fk_inst_order      FOREIGN KEY (order_id) REFERENCES orders (id) ON DELETE CASCADE,
    CONSTRAINT ck_inst_down       CHECK (down_payment >= 0),
    CONSTRAINT ck_inst_term       CHECK (term_months BETWEEN 3 AND 84),
    CONSTRAINT ck_inst_rate       CHECK (interest_rate >= 0),
    CONSTRAINT ck_inst_monthly    CHECK (monthly_payment > 0),
    CONSTRAINT ck_inst_total      CHECK (total_amount > 0)
);

-- ---------------------------------------------------------------------
-- 8. Избранные автомобили (N:M users <-> vehicles)
-- ---------------------------------------------------------------------
CREATE TABLE favorites (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT    NOT NULL,
    vehicle_id BIGINT    NOT NULL,
    created_at TIMESTAMP NOT NULL DEFAULT now(),
    updated_at TIMESTAMP NOT NULL DEFAULT now(),
    CONSTRAINT uq_fav_user_vehicle UNIQUE (user_id, vehicle_id),
    CONSTRAINT fk_fav_user    FOREIGN KEY (user_id)    REFERENCES users (id)    ON DELETE CASCADE,
    CONSTRAINT fk_fav_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id) ON DELETE CASCADE
);

-- ---------------------------------------------------------------------
-- 9. Отзывы об автомобилях
-- ---------------------------------------------------------------------
CREATE TABLE reviews (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT        NOT NULL,
    vehicle_id BIGINT        NOT NULL,
    rating     INT           NOT NULL,
    comment    VARCHAR(1000),
    created_at TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT uq_review_user_vehicle UNIQUE (user_id, vehicle_id),
    CONSTRAINT fk_review_user    FOREIGN KEY (user_id)    REFERENCES users (id)    ON DELETE CASCADE,
    CONSTRAINT fk_review_vehicle FOREIGN KEY (vehicle_id) REFERENCES vehicles (id) ON DELETE CASCADE,
    CONSTRAINT ck_review_rating  CHECK (rating BETWEEN 1 AND 5)
);

-- ---------------------------------------------------------------------
-- 10. Уведомления пользователям
-- ---------------------------------------------------------------------
CREATE TABLE notifications (
    id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id    BIGINT        NOT NULL,
    title      VARCHAR(150)  NOT NULL,
    message    VARCHAR(1000) NOT NULL,
    type       VARCHAR(30)   NOT NULL DEFAULT 'INFO',
    is_read    BOOLEAN       NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT fk_notif_user FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE,
    CONSTRAINT ck_notif_type CHECK (type IN ('INFO','TEST_DRIVE','ORDER','INSTALLMENT','SYSTEM'))
);

-- ---------------------------------------------------------------------
-- 11. Платежи по заказам (имитация платёжного шлюза)
-- ---------------------------------------------------------------------
CREATE TABLE payments (
    id                  BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id            BIGINT        NOT NULL,
    provider_payment_id VARCHAR(60)   NOT NULL,
    amount              NUMERIC(12,2) NOT NULL,
    method              VARCHAR(10)   NOT NULL DEFAULT 'CARD',
    status              VARCHAR(12)   NOT NULL DEFAULT 'PENDING',
    masked_card         VARCHAR(25),
    created_at          TIMESTAMP     NOT NULL DEFAULT now(),
    updated_at          TIMESTAMP     NOT NULL DEFAULT now(),
    CONSTRAINT uq_payments_provider UNIQUE (provider_payment_id),
    CONSTRAINT fk_payments_order    FOREIGN KEY (order_id) REFERENCES orders (id) ON DELETE CASCADE,
    CONSTRAINT ck_payments_method   CHECK (method IN ('CARD','CASH')),
    CONSTRAINT ck_payments_status   CHECK (status IN ('PENDING','SUCCEEDED','FAILED')),
    CONSTRAINT ck_payments_amount   CHECK (amount > 0)
);

-- =====================================================================
--  ИНДЕКСЫ для часто запрашиваемых полей
-- =====================================================================
CREATE INDEX idx_vehicles_brand     ON vehicles (brand_id);
CREATE INDEX idx_vehicles_status    ON vehicles (status);
CREATE INDEX idx_vehicles_price     ON vehicles (price);
CREATE INDEX idx_vehicles_body      ON vehicles (body_type);
CREATE INDEX idx_vehicles_brand_st  ON vehicles (brand_id, status);

CREATE INDEX idx_vimg_vehicle       ON vehicle_images (vehicle_id);

CREATE INDEX idx_td_user            ON test_drives (user_id);
CREATE INDEX idx_td_vehicle         ON test_drives (vehicle_id);
CREATE INDEX idx_td_status          ON test_drives (status);
CREATE INDEX idx_td_scheduled       ON test_drives (scheduled_at);

CREATE INDEX idx_orders_user        ON orders (user_id);
CREATE INDEX idx_orders_vehicle     ON orders (vehicle_id);
CREATE INDEX idx_orders_status      ON orders (status);

CREATE INDEX idx_payments_order     ON payments (order_id);

CREATE INDEX idx_fav_user           ON favorites (user_id);
CREATE INDEX idx_reviews_vehicle    ON reviews (vehicle_id);
CREATE INDEX idx_notif_user         ON notifications (user_id);
CREATE INDEX idx_notif_user_read    ON notifications (user_id, is_read);
